# optix-subd

./: .gitignore  .gitmodules  CMakeLists.txt  GBuffer.cu  GBuffer.cuh  GBuffer.h  LICENSE-THIRD-PARTY.txt  LICENSE.txt  README.md  args.cpp  args.h  closestHit.cu  denoiserstub.cu  denoiserstub.h  deviceCode.cu  optixRenderer.cpp  optixRenderer.h  optixSubd.cpp  optixSubdApp.cpp  optixSubdApp.h  optixSubdGUI.cpp  optixSubdGUI.h  pipeline.cpp  pipeline.h  shadingTypes.h  statistics.cpp  statistics.h  utils.cuh  utils.h  version.cpp  version.h.in
CMake/: FetchAssets.cmake  build_stamp.cmake  embed_cuda.cmake
cluster_builder/: CMakeLists.txt  cluster.h  clusterAccelBuilder.cu  clusterAccelBuilder.h  clusterGatherers.cuh  computeClusterTiling.cuh  fillClusters.cuh  tessellator.cu  tessellator.h  tessellatorConfig.h  tilings.h
material/: CMakeLists.txt  materialCache.cpp  materialCache.h  materialCuda.h
motionvec/: CMakeLists.txt  DynamicSubdCUDA.h  motionvec.cu  motionvec.h
optix-toolkit/: CMakeLists.txt
optix-toolkit/CMake/: BuildConfig.cmake  FetchGlad.cmake  FetchGlfw.cmake  FetchGtest.cmake  FetchImgui.cmake  FetchImplot.cmake  FetchOpenEXR.cmake  FetchOptiX.cmake  FindOptiX.cmake  OptiXToolkitConfig.cmake.in  Policies.cmake  embed_ptx.cmake
optix-toolkit/ShaderUtil/: CMakeLists.txt
optix-toolkit/ShaderUtil/include/OptiXToolkit/ShaderUtil/: Aabb.h  Affine.h  CudaSelfIntersectionAvoidance.h  Matrix.h  OptixSelfIntersectionAvoidance.h  Preprocessor.h  Quaternion.h  Record.h  SelfIntersectionAvoidance.h  color.h  vec_math.h
optix-toolkit/ShaderUtil/include/OptiXToolkit/ShaderUtil/SelfIntersectionAvoidance/: CudaSelfIntersectionAvoidanceImpl.h  OptixSelfIntersectionAvoidanceImpl.h  SelfIntersectionAvoidanceImpl.h
optix-toolkit/Util/: CMakeLists.txt
optix-toolkit/Util/include/OptiXToolkit/Util/: CuBuffer.h  Exception.h
optix-toolkit/Util/src/: Exception.cpp
optix-toolkit/examples/: CMakeLists.txt
optix-toolkit/examples/Gui/: CMakeLists.txt
optix-toolkit/examples/Gui/include/OptiXToolkit/Gui/: CUDAOutputBuffer.h  Camera.h  GLCheck.h  GLDisplay.h  ImguiRenderer.h  Trackball.h  Window.h
optix-toolkit/examples/Gui/src/: Camera.cpp  GLCheck.cpp  GLDisplay.cpp  ImguiRenderer.cpp  Trackball.cpp  Window.cpp
profiler/: CMakeLists.txt  cudaObjects.h  profiler.cpp  profiler.h  profilerGUI.cpp  profilerGUI.h  sampler.h  stopwatch.cpp  stopwatch.h
scene/: CMakeLists.txt  FetchJsoncpp.cmake  animation.cpp  animation.h  json.cpp  json.h  scene.cpp  scene.h  sceneTypes.h  shapeUtils.cpp  shapeUtils.h  vertex.h
subdivision/: CMakeLists.txt  SubdivisionPlanCUDA.h  SubdivisionSurface.cu  SubdivisionSurface.h  SubdivisionSurfaceCUDA.h  TopologyCache.cpp  TopologyCache.h  TopologyMap.cu  TopologyMap.h  farUtils.cpp  farUtils.h
texture/: CMakeLists.txt  bicubicTexture.h  dds.cpp  dds.h  dxgi_formats.cpp  dxgi_formats.h  exr.cpp  exr.h  stb.cpp  stb.h  texture.cu  texture.h  textureCache.cpp  textureCache.h  textureCuda.h
texture/stb_image/: stb_image.h
wireframe/: CMakeLists.txt  wireframe.cpp  wireframe.h
